# haskell-code-explorer

./: .gitignore  .gitmodules  README.md  cabal.project  distribute  haskell-code-explorer.cabal  index  indexer  install.hs  server  stack-9.10.2.yaml  stack.yaml
.circleci/: config.yml
app/: Indexer.hs  Server.hs
example/: %2FUsers%2Fliuzichao%2Fhaskell-code-explorer%2Fsrc%2FHaskellCodeExplorer%2FModuleInfo.hs.json  ModuleInfo.AbsPath.html  src%2FHaskellCodeExplorer%2FModuleInfo.hs.json
javascript/: package-lock.json  package.json
javascript/release/: index.html
javascript/release/assets/: haskell-code-explorer-3833fa061faafadebab0d8d4901516d3.css  haskell-code-explorer-444a9fb93e5ba11e858dc42c9b54ce47.js  haskell-code-explorer-470eee8a7194bbaf0c429fc96db08c30.js  vendor-ec4ad93c0a3d82f998b275a606baae84.css  vendor-f5e9739e5dff1ec0540918c848a0553c.js
src/HaskellCodeExplorer/: GhcUtils.hs  ModuleInfo.hs  PackageInfo.hs  Preprocessor.hs  Types.hs
src/HaskellCodeExplorer/AST/: RenamedSource.hs  TypecheckedSource.hs
test/: Main.hs
test/test-package/: test-package.cabal
