cabal-version:       3.8
name:                haskell-code-explorer
version:             0.2.0.0
synopsis:            Web application for exploring and understanding Haskell codebases
Category:            GHC,Web
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Alexey Kiryushin
maintainer:          alexey.a.kiryushin@gmail.com
build-type:          Simple

library
  default-language: Haskell2010
  exposed-modules: HaskellCodeExplorer.PackageInfo
                 , HaskellCodeExplorer.ModuleInfo
                 , HaskellCodeExplorer.Types
                 , HaskellCodeExplorer.Preprocessor
                 , HaskellCodeExplorer.GhcUtils
                 , HaskellCodeExplorer.AST.RenamedSource
                 , HaskellCodeExplorer.AST.TypecheckedSource
  hs-source-dirs: src
  ghc-options:   -Wall -O2 -funbox-strict-fields -package ghc
  build-depends: IntervalMap
               , aeson
               , attoparsec
               , base
               , blaze-html
               , deepseq
               , Cabal
               , Cabal-syntax
               , bytestring
               , cereal
               , containers
               , directory
               , directory-tree
               , exceptions
               , filemanip
               , filepath
               , ghc
               , ghc-paths
               , hashable
               , haddock-library
               , mtl
               , process
               , syb
               , uniplate
               , text
               , unordered-containers
               , vector
               , fast-logger
               , monad-logger
               , extra

executable haskell-code-indexer
  main-is:             Indexer.hs
  ghc-options:        -Wall -rtsopts -O2 -funbox-strict-fields -package ghc
  other-modules: Paths_haskell_code_explorer
  hs-source-dirs: app
  build-depends:     IntervalMap
                   , aeson
                   , base
                   , bytestring
                   , Cabal
                   , Cabal-syntax
                   , cereal
                   , directory
                   , filepath
                   , ghc
                   , optparse-applicative
                   , text
                   , time
                   , unordered-containers
                   , uri-encode
                   , fast-logger
                   , monad-logger
                   , zlib
                   , haskell-code-explorer
  default-language:    Haskell2010

executable haskell-code-server
  main-is:             Server.hs
  ghc-options:        -Wall -O2 -rtsopts -funbox-strict-fields -threaded -package ghc
  hs-source-dirs: app,src
  other-modules: HaskellCodeExplorer.Types, Store
  build-depends:     IntervalMap
                   , aeson
                   , base
                   , bytestring
                   , cereal
                   , containers
                   , deepseq
                   , directory
                   , exceptions
                   , filemanip
                   , filepath
                   , ghc
                   , blaze-html
                   , text
                   , unordered-containers
                   , hashable
                   , vector
                   , wai
                   , syb
                   , haddock-library
                   , servant
                   , servant-server
                   , mime-types
                   , mtl
                   , wai-extra
                   , wai-middleware-static
                   , warp
                   , http-types
                   , http-api-data
                   , fast-logger
                   , monad-logger
                   , optparse-applicative
                   , data-default
                   , pagination
                   , file-embed
                   , mmap
                   , lens
                   , uri-encode
                   , lens-aeson
                   , wreq
  build-depends: ghc-compact

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:    -Wall
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends: IntervalMap
               , QuickCheck
               , attoparsec
               , base
               , bytestring
               , containers
               , directory
               , filepath
               , hspec
               , text
               , uniplate
               , unordered-containers
               , monad-logger
               , process
               , vector
               , syb
               , haskell-code-explorer
