cabal-version:       3.8
name:                haskell-code-explorer
version:             0.2.0.0
synopsis:            Web application for exploring and understanding Haskell codebases
Category:            GHC,Web
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Alexey Kiryushin
maintainer:          alexey.a.kiryushin@gmail.com
build-type:          Simple

library
  exposed-modules: HaskellCodeExplorer.PackageInfo
                 , HaskellCodeExplorer.ModuleInfo
                 , HaskellCodeExplorer.Types
                 , HaskellCodeExplorer.Preprocessor
                 , HaskellCodeExplorer.GhcUtils
                 , HaskellCodeExplorer.AST.RenamedSource
                 , HaskellCodeExplorer.AST.TypecheckedSource
  hs-source-dirs: src
  ghc-options:   -Wall -O2 -funbox-strict-fields
  build-depends: IntervalMap
               , aeson
               , attoparsec
               , base
               , blaze-html
               , bytestring
               , Cabal
               , Cabal-syntax
               , cereal
               , containers
               , deepseq
               , directory
               , directory-tree
               , exceptions
               , filemanip
               , filepath
               , haddock-library
               , hashable
               , ghc
               , ghc-paths
               , mtl
               , process
               , syb
               , uniplate
               , text
               , unordered-containers
               , vector
               , fast-logger
               , monad-logger
               , extra

executable haskell-code-indexer
  main-is:          Indexer.hs
  ghc-options:      -Wall -rtsopts -O2 -funbox-strict-fields -package ghc
  other-modules:    Paths_haskell_code_explorer
  autogen-modules:  Paths_haskell_code_explorer
  hs-source-dirs:   app
  default-extensions: MonoLocalBinds
  build-depends:     IntervalMap
                   , aeson
                   , base
                   , bytestring
                   , Cabal
                   , Cabal-syntax
                   , cereal
                   , containers
                   , deepseq
                   , directory
                   , exceptions
                   , fast-logger
                   , filepath
                   , ghc
                   , haskell-code-explorer
                   , hspec
                   , monad-logger
                   , optparse-applicative
                   , os-string
                   , rts
                   , process
                   , time
                   , text
                   , unordered-containers
                   , uri-encode
                   , zlib

executable haskell-code-server
  main-is:             Server.hs
  ghc-options:        -Wall -O2 -rtsopts -funbox-strict-fields
  hs-source-dirs: app,src
  other-modules: HaskellCodeExplorer.Types, Store
  build-depends:     IntervalMap
                   , aeson
                   , base
                   , bytestring
                   , cereal
                   , containers
                   , deepseq
                   , directory
                   , exceptions
                   , filemanip
                   , filepath
                   , blaze-html
                   , text
                   , unordered-containers
                   , hashable
                   , vector
                   , wai
                   , syb
                   , haddock-library
                   , servant
                   , servant-server
                   , mime-types
                   , mtl
                   , wai-extra
                   , wai-middleware-static
                   , warp
                   , http-types
                   , http-api-data
                   , fast-logger
                   , monad-logger
                   , optparse-applicative
                   , data-default
                   , pagination
                   , file-embed
                   , mmap
                   , lens
                   , uri-encode
                   , lens-aeson
                   , wreq
  build-depends: ghc-compact

test-suite test
  type: exitcode-stdio-1.0
  ghc-options:    -Wall
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends: IntervalMap
               , QuickCheck
               , attoparsec
               , base
               , bytestring
               , containers
               , directory
               , filepath
               , hspec
               , text
               , uniplate
               , unordered-containers
               , monad-logger
               , process
               , vector
               , syb
               , haskell-code-explorer
