cabal-version:       3.8
name:                haskell-code-explorer
version:             0.2.0.0
synopsis:            Web application for exploring and understanding Haskell codebases
Category:            GHC,Web
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Alexey Kiryushin
maintainer:          alexey.a.kiryushin@gmail.com
build-type:          Simple

library
  exposed-modules: HaskellCodeExplorer.PackageInfo
                 , HaskellCodeExplorer.ModuleInfo
                 , HaskellCodeExplorer.Types
                 , HaskellCodeExplorer.Preprocessor
                 , HaskellCodeExplorer.GhcUtils
                 , HaskellCodeExplorer.AST.RenamedSource
                 , HaskellCodeExplorer.AST.TypecheckedSource
  hs-source-dirs: src
  ghc-options:   -Wall -O2 -funbox-strict-fields
  build-depends: aeson
               , attoparsec
               , base
               , blaze-html
               , bytestring
               , Cabal
               , Cabal-syntax
               , cereal
               , containers
               , deepseq
               , directory
               , directory-tree
               , exceptions
               , extra
               , fast-logger
               , filemanip
               , filepath
               , haddock-library
               , hashable
               , IntervalMap
               , ghc
               , ghc-paths
               , monad-logger
               , mtl
               , process
               , syb
               , text
               , uniplate
               , unordered-containers
               , vector

executable haskell-code-indexer
  main-is:          Indexer.hs
  ghc-options:      -Wall -rtsopts -O2 -funbox-strict-fields -package ghc
  other-modules:    Paths_haskell_code_explorer
  autogen-modules:  Paths_haskell_code_explorer
  hs-source-dirs:   app
  default-extensions: MonoLocalBinds
  build-depends:     aeson
                   , base
                   , bytestring
                   , Cabal
                   , Cabal-syntax
                   , cereal
                   , containers
                   , deepseq
                   , directory
                   , exceptions
                   , fast-logger
                   , filepath
                   , ghc
                   , haskell-code-explorer
                   , hspec
                   , IntervalMap
                   , monad-logger
                   , optparse-applicative
                   , os-string
                   , rts
                   , process
                   , time
                   , text
                   , unordered-containers
                   , uri-encode
                   , zlib

executable haskell-code-server
  main-is:             Server.hs
  ghc-options:        -Wall -O2 -rtsopts -funbox-strict-fields
  hs-source-dirs: app,src
  other-modules: HaskellCodeExplorer.Types, Store
  build-depends:     aeson
                   , base
                   , blaze-html
                   , bytestring
                   , cereal
                   , containers
                   , data-default
                   , deepseq
                   , directory
                   , exceptions
                   , fast-logger
                   , file-embed
                   , filemanip
                   , filepath
                   , IntervalMap
                   , text
                   , haddock-library
                   , hashable
                   , http-types
                   , http-api-data
                   , lens
                   , monad-logger
                   , optparse-applicative
                   , pagination
                   , mime-types
                   , mmap
                   , mtl
                   , lens-aeson
                   , servant
                   , servant-server
                   , syb
                   , unordered-containers
                   , uri-encode
                   , vector
                   , wai
                   , wai-extra
                   , wai-middleware-static
                   , warp
                   , wreq
  build-depends: ghc-compact

test-suite test
  type: exitcode-stdio-1.0
  ghc-options:    -Wall
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends: 
               , attoparsec
               , base
               , bytestring
               , containers
               , directory
               , filepath
               , haskell-code-explorer
               , hspec
               , IntervalMap
               , monad-logger
               , process
               , QuickCheck
               , syb
               , text
               , uniplate
               , unordered-containers
               , vector
